# hydra_client_with_socket

./: Cargo.toml  README.md
.devcontainer/: devcontainer.json  docker-compose.devcontainer.yml
generated-rust-client/: Cargo.toml  README.md
generated-rust-client/.openapi-generator/: FILES
generated-rust-client/docs/: JwkApi.md  MetadataApi.md  OAuth2Api.md  OidcApi.md  WellknownApi.md
generated-rust-client/src/apis/: client.rs  configuration.rs  jwk_api.rs  metadata_api.rs  mod.rs  o_auth2_api.rs  oidc_api.rs  wellknown_api.rs
generated-rust-client/src/models/: accept_o_auth2_consent_request.rs  accept_o_auth2_consent_request_session.rs  accept_o_auth2_login_request.rs  create_json_web_key_set.rs  create_verifiable_credential_request_body.rs  credential_supported_draft00.rs  error_o_auth2.rs  generic_error.rs  get_version_200_response.rs  health_not_ready_status.rs  health_status.rs  introspected_o_auth2_token.rs  is_ready_200_response.rs  is_ready_503_response.rs  json_patch.rs  json_web_key.rs  json_web_key_set.rs  o_auth2_client.rs  o_auth2_client_token_lifespans.rs  o_auth2_consent_request.rs  o_auth2_consent_request_open_id_connect_context.rs  o_auth2_consent_session.rs  o_auth2_consent_session_expires_at.rs  o_auth2_login_request.rs  o_auth2_logout_request.rs  o_auth2_redirect_to.rs  o_auth2_token_exchange.rs  oidc_configuration.rs  oidc_user_info.rs  pagination.rs  pagination_headers.rs  reject_o_auth2_request.rs  rfc6749_error_json.rs  token_pagination.rs  token_pagination_headers.rs  token_pagination_request_parameters.rs  (+8 more)
src/: main.rs
