[package]
name = "rs_hydra_client_with_socket"
version = "0.1.0"
edition = "2021"

[dependencies]
hyper = { version = "1.4.1", features = ["full"] }
ory-hydra-client = "2.2.0"
reqwest = "0.12.8"
tokio = { version = "1.40.0", features = ["full"] }
generated_rust_client = { path = "./generated-rust-client" }
